--- a/Lab3/CMakeLists.txt
+++ b/Lab3/CMakeLists.txt
@@ -15,7 +15,7 @@ add_library(sorting
     "include/stats.h"
     "include/selectionSort.h"
     "include/quickSort.h"
-)
+    "include/naturalMergeSort.h")
 
 set_target_properties(sorting PROPERTIES LINKER_LANGUAGE CXX)
 target_compile_features(sorting PUBLIC cxx_std_23)
